# skill-navigator

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
examples/claude-fuer-deutsches-recht/: README.md  REFERENCES.md  VIZ.md  build.sh
examples/claude-fuer-deutsches-recht/navigator-generated/recht-navigator/: SKILL.md  _manifest.json
examples/claude-fuer-deutsches-recht/navigator-generated/recht-navigator/wing-pruefer-abgleich/: SKILL.md  _manifest.json
examples/claude-fuer-deutsches-recht/navigator-generated/recht-navigator/wing-pruefer-abgleich/room-abgleich-gebrauchsmusterrecht-strafzumessung/: SKILL.md  _manifest.json
examples/claude-fuer-deutsches-recht/navigator-generated/recht-navigator/wing-pruefer-abgleich/room-abgleich-gebrauchsmusterrecht-strafzumessung/zone-abgleich-meinungspruefer-strafzumessung/: SKILL.md
scripts/: skillnav.py
skills/skill-navigator/: SKILL.md
tests/: test_skillnav.py
